feat(model): model improvement for double methods comparison